force-app/main/default/objects/National_Outings_Trip_Staff__c/National_Outings_Trip_Staff__c.object-meta.xml
<CustomObject>
    <label>National Outings Trip Staff</label>
    <nameField>
        <displayFormat>TS-{00000000}</displayFormat>
        <label>National Outing Trip Staff Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>National Outings Trip Staffs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>