force-app/main/default/objects/National_Outings_Trip_Staff__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>National Outings Trip Staffs</relationshipLabel>
    <relationshipName>National_Outings_Trip_Staffs</relationshipName>
    <type>Lookup</type>
</CustomField>