force-app/main/default/objects/National_Outings_Trip_Staff__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assistant Commissary</fullName>
            </value>
            <value>
                <fullName>Assistant_Leader</fullName>
                <label>Assistant-Leader</label>
            </value>
            <value>
                <fullName>Assistant-Leader 2</fullName>
            </value>
            <value>
                <fullName>Assistant Leader 3</fullName>
            </value>
            <value>
                <fullName>Assistant Leader 4</fullName>
            </value>
            <value>
                <fullName>Assistant Trainee</fullName>
            </value>
            <value>
                <fullName>Associate Leader</fullName>
            </value>
            <value>
                <fullName>Board Liaison</fullName>
            </value>
            <value>
                <fullName>Co-Leader</fullName>
            </value>
            <value>
                <fullName>Commissary</fullName>
            </value>
            <value>
                <fullName>Conservation Coordinator</fullName>
            </value>
            <value>
                <fullName>Conservation Specialist</fullName>
            </value>
            <value>
                <fullName>Cook</fullName>
            </value>
            <value>
                <fullName>Crew</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Evaluation Coordinator</fullName>
            </value>
            <value>
                <fullName>Guide</fullName>
            </value>
            <value>
                <fullName>Home School Mentor</fullName>
            </value>
            <value>
                <fullName>Host</fullName>
            </value>
            <value>
                <fullName>Instructor</fullName>
            </value>
            <value>
                <fullName>Leader</fullName>
            </value>
            <value>
                <fullName>Leader Child</fullName>
            </value>
            <value>
                <fullName>Liaison</fullName>
            </value>
            <value>
                <fullName>Mentor Leader</fullName>
            </value>
            <value>
                <fullName>Mountaineering Specialist</fullName>
            </value>
            <value>
                <fullName>Naturalist</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Support Staff</fullName>
            </value>
            <value>
                <fullName>Trainee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>